// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup testClass1 testClass2 emotion-euiListGroup-maxWidthDefault-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiListGroup listItems is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-maxWidthDefault"
>
  <li
    class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
      >
        <span
          class="euiListGroupItem__icon css-0"
          color="inherit"
          data-euiicon-type="stop"
        />
      </span>
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-text"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
      <button
        aria-label="bell"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="bell"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <button
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      type="button"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Button with onClick"
        >
          Button with onClick
        </span>
      </span>
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive-isSelected"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      aria-current="true"
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Active link"
        >
          Active link
        </span>
      </span>
    </a>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-text"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Link with href"
        >
          Link with href
        </span>
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiListGroup listItems is rendered with color 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-maxWidthDefault"
>
  <li
    class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-primary"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__prepend emotion-euiListItemLayout__prepend"
      >
        <span
          class="euiListGroupItem__icon css-0"
          color="inherit"
          data-euiicon-type="stop"
        />
      </span>
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="euiListItemLayout euiListGroupItem euiListGroupItem__text emotion-euiListItemLayout-euiListGroupItem-euiListGroupItem__inner-primary"
    data-test-subj="euiListItemLayout"
  >
    <span
      class="euiListItemLayout__content emotion-euiListItemLayout__content"
    >
      <span
        class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
      <button
        aria-label="bell"
        class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-primary-euiListGroupItemExtraAction-alwaysShow"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="bell"
        />
      </button>
    </span>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <button
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-primary"
      data-test-subj="euiListItemLayout"
      type="button"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Button with onClick"
        >
          Button with onClick
        </span>
      </span>
    </button>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive-isSelected"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      aria-current="true"
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Active link"
        >
          Active link
        </span>
      </span>
    </a>
  </li>
  <li
    class="euiListItemLayout__wrapper emotion-euiListItemLayout__wrapper-isInteractive"
    data-test-subj="euiListItemLayout-wrapper"
  >
    <a
      class="euiListItemLayout euiListGroupItem euiListGroupItem__button emotion-euiListItemLayout-euiListItemLayout__action-euiListGroupItem-euiListGroupItem__inner-primary"
      data-test-subj="euiListItemLayout"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListItemLayout__content emotion-euiListItemLayout__content"
      >
        <span
          class="euiListItemLayout__text euiListGroupItem__label emotion-euiListItemLayout__text-truncate"
          title="Link with href"
        >
          Link with href
        </span>
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiListGroup props bordered is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-bordered-maxWidthDefault"
/>
`;

exports[`EuiListGroup props maxWidth as a number is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup"
  style="max-inline-size: 300px;"
/>
`;

exports[`EuiListGroup props maxWidth as a string is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup"
  style="max-inline-size: 20em;"
/>
`;

exports[`EuiListGroup props maxWidth as true is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props showToolTips is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-maxWidthDefault"
/>
`;

exports[`EuiListGroup props wrapText is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-maxWidthDefault"
/>
`;
